kubernetes/ingresses/rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.1.101","192.168.1.102","192.168.1.103"],"port":443,"protocol":"HTTPS","serviceName":"cattle-system:rancher","ingressName":"cattle-system:rancher","hostname":"rancher.local","path":"/","allNodes":true}]
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
  creationTimestamp: '2024-09-09T16:18:17Z'
  generation: 3
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.9.1
    heritage: Helm
    release: rancher
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/issuer: {}
            f:cert-manager.io/issuer-kind: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:nginx.ingress.kubernetes.io/proxy-connect-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-read-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-send-timeout: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/managed-by: {}
            f:chart: {}
            f:heritage: {}
            f:release: {}
      manager: helm
      operation: Update
      time: '2024-09-09T16:18:17Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      subresource: status
      time: '2024-09-10T08:43:12Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: rancher
      operation: Update
      time: '2024-09-10T08:58:15Z'
  name: rancher
  namespace: cattle-system
  resourceVersion: '139590'
  uid: 961bd251-4fda-4c0d-b98a-51eb79cb94f3
spec:
  ingressClassName: traefik
  rules:
    - host: rancher.local
      http:
        paths:
          - backend:
              service:
                name: rancher
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - rancher.local
      secretName: tls-rancher-ingress
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.101
      - ip: 192.168.1.102
      - ip: 192.168.1.103
